2010-10-28  Per Bothner  <per@bothner.com>

	* QuoteExp.java (print): Print type.

2010-10-24  Per Bothner  <per@bothner.com>

	* Language.java (getTypeFor): Do setCanRead on ClassExp.

2010-10-23  Per Bothner  <per@bothner.com>

	* Language.java (getLangTypeFor): Can simplify now.
	(getTypeFor): Handle ReferenceExp that dereferences to a ClassExp.
	* PrimProcedure.java (<init>): Can simplify.

2010-10-21  Per Bothner  <per@bothner.com>

	* Compilation.java (generateApplyMethodsWithoutContext): Move copying
	of incoming argument to vararms/#!rest array to separate ...
	(varArgsToArray): ... new method.  Generalize so it also works
	for the WithContext case.
	(generateApplyMethodsWithContext): Use varArgsToArray.

2010-10-17  Per Bothner  <per@bothner.com>

	* IfExp.java (getTest, getThenClause, getElseClause): New accessors.

2010-10-15  Per Bothner  <per@bothner.com>

	* QuoteExp.java (validateApply): Pass MethodProc's expected parameter
	type as required type to InlineCalls#visit.

	* Compilation.java (generateApplyMethodsWithoutContext):  When
	allocating a varargs array, make sure to use the implementation type.

	* LambdaExp.java (addMethodFor): Make use of Java5 varargs array
	parameter for any array type, not just Object[].

2010-10-14  Per Bothner  <per@bothner.com>

	* LambdaExp.java (enterFunction): Don't set stackType to object
	just because the parameter is non-simple.

2010-10-11  Per Bothner  <per@bothner.com>

	* ReferenceExp.java (getType): Fix to not return toStringType.
	* InlineCalls.java (visitQuoteExp): Likewise for setting type.
	(checkType): Similarly fix argument to Type#compare.

	* PrimProcedure.java (toString): Check for null retType.

	* BeginExp.java (visitChildren): Move pushOptions/popOptions from
	here ...
	(visit): ... to here, since (for example) InlineCalls#visitBeginExp
	doesn't call BeginExp's visitChildren.

2010-10-09  Per Bothner  <per@bothner.com>

	* Compilation.java (pushPendingImport): Take extra parameter.
